fix chrome layout bug

--- a/app/styles/search.scss
+++ b/app/styles/search.scss
@@ -1,12 +1,21 @@
+.image {
+  line-height: 0;
+}
+
 .square-container {
   height: 0;
   margin-bottom: 1rem;
   padding-bottom: 100%;
+  position: relative;
   width: 100%;
 
   img {
     height: 100%;
+    left: 0;
+    margin: 0;
     object-fit: cover;
+    position: absolute;
+    top: 0;
     width: 100%;
   }
 
